tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/us-west-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-3d27fc40",
                    "NetworkAclId": "acl-ea8a188c",
                    "SubnetId": "subnet-2335f979"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3c27fc41",
                    "NetworkAclId": "acl-ea8a188c",
                    "SubnetId": "subnet-5e05b538"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-ea8a188c",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-1d2bea7b"
        }
    ]
}
